kubernetes-maven-plugin/it/src/it/simple-with-route-flag-true/expected/kubernetes.yml
#
# Copyright (c) 2019 Red Hat, Inc.
# This program and the accompanying materials are made
# available under the terms of the Eclipse Public License 2.0
# which is available at:
#
#     https://www.eclipse.org/legal/epl-2.0/
#
# SPDX-License-Identifier: EPL-2.0
#
# Contributors:
#   Red Hat, Inc. - initial API and implementation
#

---
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      jkube.eclipse.org/git-commit: "@ignore@"
      prometheus.io/port: "9779"
      jkube.eclipse.org/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/jkube-maven-sample-zero-config
      jkube.eclipse.org/git-branch: "@ignore@"
      prometheus.io/scrape: "true"
      jkube.eclipse.org/scm-tag: HEAD
    labels:
      app: jkube-maven-sample-zero-config
      provider: jkube
      version: 0.1-SNAPSHOT
      group: org.eclipse.jkube
    name: jkube-maven-sample-zero-config
  spec:
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: jkube-maven-sample-zero-config
      provider: jkube
      group: org.eclipse.jkube
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      jkube.eclipse.org/git-commit: "@ignore@"
      jkube.eclipse.org/git-branch: "@ignore@"
      jkube.eclipse.org/scm-tag: HEAD
      jkube.eclipse.org/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/jkube-maven-sample-zero-config
    labels:
      app: jkube-maven-sample-zero-config
      provider: jkube
      version: 0.1-SNAPSHOT
      group: org.eclipse.jkube
    name: jkube-maven-sample-zero-config
  spec:
    replicas: 1
    revisionHistoryLimit: 2
    selector:
      matchLabels:
        app: jkube-maven-sample-zero-config
        provider: jkube
        group: org.eclipse.jkube
    template:
      metadata:
        annotations:
          jkube.eclipse.org/git-commit: "@ignore@"
          jkube.eclipse.org/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/jkube-maven-sample-zero-config
          jkube.eclipse.org/git-branch: "@ignore@"
          jkube.eclipse.org/scm-tag: HEAD
        labels:
          app: jkube-maven-sample-zero-config
          provider: jkube
          version: 0.1-SNAPSHOT
          group: org.eclipse.jkube
      spec:
        containers:
        - env:
          - name: KUBERNETES_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          image: jkube/jkube-maven-sample-zero-config:latest
          imagePullPolicy: IfNotPresent
          name: spring-boot
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 9779
            name: prometheus
            protocol: TCP
          - containerPort: 8778
            name: jolokia
            protocol: TCP
          securityContext:
            privileged: false
