kubernetes-maven-plugin/it/src/it/simple-with-route-flag-true/expected/openshift.yml
#
# Copyright 2016 Red Hat, Inc.
#
# Red Hat licenses this file to you under the Apache License, version
# 2.0 (the "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
# implied.  See the License for the specific language governing
# permissions and limitations under the License.
#

---
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      jshift.io/git-commit: "@ignore@"
      prometheus.io/port: "9779"
      jshift.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/jshift-maven-sample-zero-config
      jshift.io/git-branch: "@ignore@"
      prometheus.io/scrape: "true"
      jshift.io/scm-tag: HEAD
    labels:
      expose: "true"
      app: jshift-maven-sample-zero-config
      provider: jshift
      version: 0.1-SNAPSHOT
      group: io.jshift
    name: jshift-maven-sample-zero-config
  spec:
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: jshift-maven-sample-zero-config
      provider: jshift
      group: io.jshift
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      jshift.io/git-commit: "@ignore@"
      jshift.io/git-branch: "@ignore@"
      jshift.io/scm-tag: HEAD
      jshift.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/jshift-maven-sample-zero-config
    labels:
      app: jshift-maven-sample-zero-config
      provider: jshift
      version: 0.1-SNAPSHOT
      group: io.jshift
    name: jshift-maven-sample-zero-config
  spec:
    replicas: 1
    revisionHistoryLimit: 2
    selector:
      app: jshift-maven-sample-zero-config
      provider: jshift
      group: io.jshift
    strategy:
      rollingParams:
        timeoutSeconds: 3600
      type: Rolling
    template:
      metadata:
        annotations:
          jshift.io/git-commit: "@ignore@"
          jshift.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/jshift-maven-sample-zero-config
          jshift.io/git-branch: "@ignore@"
          jshift.io/scm-tag: HEAD
        labels:
          app: jshift-maven-sample-zero-config
          provider: jshift
          version: 0.1-SNAPSHOT
          group: io.jshift
      spec:
        containers:
        - env:
          - name: KUBERNETES_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          image: jshift-maven-sample-zero-config:latest
          imagePullPolicy: IfNotPresent
          name: spring-boot
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 9779
            name: prometheus
            protocol: TCP
          - containerPort: 8778
            name: jolokia
            protocol: TCP
          securityContext:
            privileged: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - spring-boot
        from:
          kind: ImageStreamTag
          name: jshift-maven-sample-zero-config:latest
      type: ImageChange
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      expose: "true"
      app: jshift-maven-sample-zero-config
      provider: jshift
      version: 0.1-SNAPSHOT
      group: io.jshift
    name: jshift-maven-sample-zero-config
  spec:
    port:
      targetPort: 8080
    to:
      kind: Service
      name: jshift-maven-sample-zero-config
